src/test/ui/regions/regions-infer-invariance-due-to-mutability-4.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-infer-invariance-due-to-mutability-4.rs:21:5
   |
LL | fn to_longer_lifetime<'r>(b_isize: Invariant<'r>) -> Invariant<'static> {
   |                       -- lifetime `'r` defined here
LL |     b_isize //~ ERROR mismatched types
   |     ^^^^^^^ returning this value requires that `'r` must outlive `'static`

error: aborting due to previous error

